--- a/Css/style.css
+++ b/Css/style.css
@@ -1,7 +1,6 @@
 .nav-bar{
-
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
@@ -44,6 +43,15 @@
 }
 .base-conteudo{
     margin-top: 10px;
-    height: 1200px;
+    height: auto;
     background-color: #394867;
+}
+p{
+    text-align: justify;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: white;
+    font-size:30px;
+    text-indent: 20px;
 }
