--- a/Css/style.css
+++ b/Css/style.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content:space-between;
     align-items: center;
     height: auto;
     background-color: #212a3e;
@@ -10,8 +10,6 @@
 
 .logo-nav{
     height: auto;
-    float: left;
-    float: left;
     margin-left: 2%;
 
     border-radius: 20px;
@@ -19,6 +17,7 @@
 
 .logo-site{
     height: 100px;
+    
 }
 
 .link-nav{
@@ -34,24 +33,82 @@
 
 .links{
     display: flex;
-    padding: 0px 50%;
+    padding: 0px 10%;
     align-items: center;
     justify-content: space-between;
     font-size: 25px;
     text-decoration: none;
     color: white;
+    flex-wrap: nowrap;
 }
 .base-conteudo{
     margin-top: 10px;
     height: auto;
-    background-color: #394867;
+    display: flex;
+    justify-content: space-between;
 }
 p{
     text-align: justify;
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
-    color: white;
+    color: black;
     font-size:30px;
     text-indent: 20px;
+    padding: 0px 5%;
+}
+.imagem-fake-news{
+    width: auto;
+    height: auto;
+    float: left;
+    margin-left: 3%;
+    margin-top: 3%;
+}
+.subtitulo{
+    text-align: center;
+}
+.introducao{
+    padding: 0px 5%;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: black;
+    font-size:30px;
+    text-align: center;
+}
+li{
+    text-align: justify;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: black;
+    font-size:30px;
+    text-indent: 20px;
+    padding: 0px 5%;
+}
+.texto-imagem{
+    padding: 0px 5%;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: black;
+    font-size:30px;
+    text-align: center;
+}
+.imagem-covid{
+    width: auto;
+    height: auto;
+    float: left;
+    margin-left: 3%;
+    margin-top: 3%;
+}
+.imagem-papa{
+    width: auto;
+    height: auto;
+    float: left;
+    margin-left: 3%;
+    margin-top: 3%;
+}
+.texto-papa{
+    padding-left: 5%;
 }
