--- a/Css/style.css
+++ b/Css/style.css
@@ -1,11 +1,26 @@
+body{
+    margin: 0;
+}
+
 .nav-bar{
+    position: fixed;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content:space-between;
     align-items: center;
-    height: auto;
+    width: 100%;
     background-color: #212a3e;
+}
+
+hr{
+    height: 50px;
+}
+
+.linha{
+    width: 100%;
+    height: 1px;
+    background: black;
 }
 
 .logo-nav{
@@ -20,42 +35,62 @@
 }
 
 .link-nav{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content:space-around;
-    padding: 0px 9%;
-    align-items: center;
-    width: auto;
-    height: 100px;
-    text-decoration: none;
-    color:white;
-    gap: 10px;
+
 }
 
-.links{
+.links {
     display: flex;
-    padding: 0px 8px;
+ }
+ 
+ .links:hover {
+ 
+ }
+ 
+ ul {
+     display: flex;
+     align-items: center;
+     justify-content: space-around;
+     flex-direction: row;
+ }
+ 
+ li {
+    padding: 30px;
+    text-decoration: none;
+    list-style: none;
+    display: flex;
+    text-decoration: none;
+    transition: background-color 1s ease;
     align-items: center;
+    justify-content: center;
     flex-direction: row;
-    justify-content: space-between;
-    font-size: 25px;
-    text-decoration: none;
-    color: white;
-    flex-wrap: nowrap;
-    height: 20px;
-    text-decoration: none;
-}
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 8px 20px;
+    border-radius: 5px;
+ }
+ 
+ li:hover {
+     background-color: rgb(0, 195, 255);
+     list-style: none;
+     
+ }
+ 
+ a {
+     display: flex;
+     align-items: center;
+     font-size: 18px;
+     padding: 1px 28px 1px 10px;
+ }
 
 .base-conteudo{
     margin-top: 10px;
     height: auto;
-    display: flex;
     justify-content: space-between;
 }
 
 p{
-    text-align: justify;
+    text-align: center;
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
@@ -65,12 +100,17 @@ p{
     padding: 0px 5%;
 }
 
+#Imagem-fake-news{
+    margin-top: 13%;
+}
+
 .imagem-fake-news{
     width: auto;
     height: auto;
     float: left;
     margin-left: 3%;
     margin-top: 3%;
+    margin-right: 8px;
 }
 
 .subtitulo{
@@ -84,7 +124,7 @@ p{
     margin-right: 20px;
     color: black;
     font-size:30px;
-    text-align: center;
+    text-align: justify;
 }
 
 li{
@@ -105,7 +145,7 @@ li{
     margin-right: 20px;
     color: black;
     font-size:30px;
-    text-align: center;
+    text-align: justify;
 }
 
 .imagem-covid{
@@ -122,6 +162,7 @@ li{
     float: left;
     margin-left: 3%;
     margin-top: 3%;
+    margin-right: 2%;
 }
 
 .texto-papa{
@@ -131,4 +172,16 @@ li{
 #inicio{
     text-align: center;
 }
+.imagem-twitter{
+    width: auto;
+    height: auto;
+    float: left;
+    margin-left: 3%;
+    margin-top: 3%;
+    margin-right: 2%;
+}
 
+#creditos{
+    text-align: center;
+    font-size: 15px;
+}
