--- a/Css/Carrossel.css
+++ b/Css/Carrossel.css
@@ -1,5 +1,5 @@
 body{
-    padding-bottom: 1%;
+    padding-bottom: 3%;
 }
 
 .nav-bar{
@@ -10,6 +10,7 @@ body{
     flex-direction: row;
     justify-content:space-between;
     align-items: center;
+    width: 100%;
     background-color: #212a3e;
 }
 
@@ -20,13 +21,12 @@ body{
 }
 
 .link-nav{
-    margin-right: 10px;
+    margin-right: 36%;
 }
 
 .logo-nav{
-    display: flex;
     height: auto;
-    margin-left: 10%;
+    margin-left: 2%;
     border-radius: 20px;
 }
 
@@ -36,69 +36,73 @@ body{
 
 .links {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    color: aliceblue;
  }
 
  
  ul {
-     display: flex;
-     align-items: center;
-     justify-content: space-around;
-     flex-direction: row;
- }
- 
- li {
-    text-decoration: none;
-    list-style: none;
     display: flex;
-    text-decoration: none;
-    transition: background-color 1s ease;
+    align-items: center;
+    justify-content: space-around;
     flex-direction: row;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    margin: 10px 5px;
-    border-radius: 5px;
-    border: 1px solid rgb(0, 195, 255);
- }
- 
- li:hover {
-     background-color: rgb(0, 195, 255);
-     list-style: none;
-     text-decoration: none;
- }
- 
- .links a {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     font-size: 18px;
-     padding: 5px 28px 5px 30px;
-     margin: 0 15px;
-     color: rgb(0, 195, 255);
-     text-decoration: none;
- }
+}
+
+li {
+   text-decoration: none;
+   list-style: none;
+   display: flex;
+   text-decoration: none;
+   transition: background-color 1s ease;
+   flex-direction: row;
+   white-space: nowrap;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   margin: 10px 5px;
+   border-radius: 5px;
+   border: 1px solid rgb(0, 195, 255);
+}
+
+li:hover {
+    background-color: rgb(0, 195, 255);
+    list-style: none;
+    text-decoration: none;
+}
+
+.links a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    padding: 5px 28px 5px 30px;
+    margin: 0 15px;
+    color: rgb(0, 195, 255);
+    text-decoration: none;
+}
 
  .nav-bar .link-nav .links a {
     text-decoration: none;
   }
 
 #tamanho-slide{
-    width: 875px;
+    width: 1500px;
     height: auto;
     justify-content: center;
     align-items: center;
-    margin-left: 18%;
+    margin-left: 11%;
     margin-top: auto;
     border: 10px solid black;
 }
 
 .linha{
+    margin-top: 2%;
     width: 100%;
     height: 1px;
     background: black;
 }
 
 #creditos{
-    text-align: center;
+    padding-left: 42%;
     font-size: 15px;
 }
