--- a/Css/style.css
+++ b/Css/style.css
@@ -1,5 +1,5 @@
 body{
-    padding-bottom: 3%;
+    padding-bottom: 1%;
 }
 
 .nav-bar{
@@ -142,19 +142,21 @@ p{
     display: inline-block;
 }
 
-.imagem-fake-news{
+.imagens-texto{
     display: inline-block;
-    width: auto;
+    width: 900px;
     height: auto;
-    margin-left: 1%;
-    margin-top: 9%;
-    margin-right: 8px;
-    border-radius: 10px;
+    margin: 3%;
+    border-radius: 20px;
 }
 
 .subtitulo{
     text-align: center;
     margin: 15px 0;
+}
+
+.subtitulo h1{
+    margin: 3%;
 }
 
 .introducao{
